--- a/PLGaultier/model.ipynb
+++ b/PLGaultier/model.ipynb
@@ -1,153 +1,222 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Chest X-Ray Pneumonia Detection with fastai\n",
-        "\n",
-        "This notebook reproduces the training workflow contributed by **PLGaultier** using the [fastai](https://docs.fast.ai/) API on top of PyTorch. The code expects the dataset to be laid out under `../data/chest_xray` with the `train`, `val`, and `test` sub-folders containing `NORMAL` and `PNEUMONIA` classes."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from pathlib import Path\n",
-        "\n",
-        "from fastai.vision.all import (ImageDataLoaders, Resize, aug_transforms,\n",
-        "                               cnn_learner, error_rate, resnet34)\n",
-        "\n",
-        "DATA_ROOT = Path('..') / 'data' / 'chest_xray'\n",
-        "BATCH_SIZE = 32\n",
-        "IMG_SIZE = 256"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Create the data loaders\n",
-        "\n",
-        "The `ImageDataLoaders.from_folder` factory automatically infers labels from sub-folder names. We use a validation split matching the published dataset."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "train_path = DATA_ROOT / 'train'\n",
-        "valid_path = DATA_ROOT / 'val'\n",
-        "\n",
-        "dls = ImageDataLoaders.from_folder(\n",
-        "    train_path,\n",
-        "    valid_pct=0.0,\n",
-        "    valid=valid_path,\n",
-        "    train='.',\n",
-        "    valid_pct=None,\n",
-        "    bs=BATCH_SIZE,\n",
-        "    item_tfms=Resize(IMG_SIZE),\n",
-        "    batch_tfms=aug_transforms(do_flip=True, flip_vert=True, max_rotate=20)\n",
-        ")\n",
-        "\n",
-        "print(dls.vocab)\n",
-        "dls.show_batch(max_n=9, figsize=(8, 8))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Transfer learning with ResNet-34\n",
-        "\n",
-        "The learner is configured with `error_rate` as an additional metric to track performance beyond accuracy."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "learn = cnn_learner(dls, resnet34, metrics=[error_rate], pretrained=True)\n",
-        "learn.model"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Train with discriminative learning rates\n",
-        "\n",
-        "FastAI's `fine_tune` automatically performs frozen and unfrozen phases. Feel free to experiment with the number of epochs to match the original paper's results."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "learn.fine_tune(5)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Evaluate on the test set\n",
-        "\n",
-        "Once the learner is trained we can create a dataloader that points to the held-out test directory and compute accuracy metrics."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "test_files = (DATA_ROOT / 'test').rglob('*.jpeg')\n",
-        "\n",
-        "test_dl = learn.dls.test_dl(list(test_files))\n",
-        "test_preds, test_targets = learn.get_preds(dl=test_dl)\n",
-        "accuracy = (test_preds.argmax(dim=1) == test_targets).float().mean().item()\n",
-        "print(f\"Test accuracy: {accuracy:.4f}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Export the trained learner\n",
-        "\n",
-        "Saving the learner allows the model to be re-used for inference without retraining."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "learn.export('plgaultier_fastai_pneumonia.pkl')"
-      ]
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.10"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chest X-Ray Pneumonia Detection with fastai\n",
+    "\n",
+    "This notebook mirrors the training workflow from **PLGaultier**'s project. It fine-tunes a pre-trained ResNet-34 model using the [fastai](https://docs.fast.ai/) library on the canonical chest X-ray dataset prepared in this repository.\n"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 5
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Environment setup\n",
+    "\n",
+    "Import the Python packages and ensure that a GPU is visible for accelerated training.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import torch\n",
+    "from fastai.vision.all import (\n",
+    "    ImageDataLoaders,\n",
+    "    Resize,\n",
+    "    aug_transforms,\n",
+    "    vision_learner,\n",
+    "    resnet34,\n",
+    "    error_rate,\n",
+    "    accuracy,\n",
+    "    ClassificationInterpretation\n",
+    ")\n",
+    "\n",
+    "import fastai\n",
+    "print(f'fastai version: {fastai.__version__}')\n",
+    "print(f'Using device: {torch.cuda.get_device_name(0) if torch.cuda.is_available() else \"CPU\"}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Dataset organisation\n",
+    "\n",
+    "The dataset is expected at `../data/chest_xray` with `train`, `val`, and `test` folders each containing `NORMAL` and `PNEUMONIA` sub-directories.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_root = Path('..') / 'data' / 'chest_xray'\n",
+    "train_path = data_root / 'train'\n",
+    "valid_path = data_root / 'val'\n",
+    "test_path = data_root / 'test'\n",
+    "\n",
+    "for split in ('train', 'val', 'test'):\n",
+    "    for label in ('NORMAL', 'PNEUMONIA'):\n",
+    "        path = data_root / split / label\n",
+    "        if not path.exists():\n",
+    "            raise FileNotFoundError(f'Missing expected directory: {path}')\n",
+    "\n",
+    "print('Dataset folders located successfully.')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Data loaders\n",
+    "\n",
+    "Create augmented data loaders with fastai's helper that applies light augmentations to the training split.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_tfms = Resize(460)\n",
+    "batch_tfms = aug_transforms(mult=1.0, max_warp=0.)\n",
+    "\n",
+    "dls = ImageDataLoaders.from_folder(\n",
+    "    train_path.parent,\n",
+    "    train='train',\n",
+    "    valid='val',\n",
+    "    seed=42,\n",
+    "    item_tfms=item_tfms,\n",
+    "    batch_tfms=batch_tfms,\n",
+    "    bs=32\n",
+    ")\n",
+    "\n",
+    "dls.show_batch(max_n=9, figsize=(6, 6))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Model definition\n",
+    "\n",
+    "Instantiate a learner backed by a ResNet-34 encoder pre-trained on ImageNet.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn = vision_learner(dls, resnet34, metrics=[accuracy, error_rate])\n",
+    "learn.model\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Training\n",
+    "\n",
+    "Perform transfer learning with discriminative learning rates and frozen early layers, then fine-tune the entire network.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn.freeze()\n",
+    "learn.fit_one_cycle(3, 1e-3)\n",
+    "\n",
+    "learn.unfreeze()\n",
+    "learn.fine_tune(5, base_lr=1e-4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Evaluation\n",
+    "\n",
+    "Inspect predictions, compute the confusion matrix, and generate a classification report.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn.show_results(max_n=6, figsize=(8, 8))\n",
+    "interp = ClassificationInterpretation.from_learner(learn)\n",
+    "interp.plot_confusion_matrix(figsize=(4, 4))\n",
+    "interp.print_classification_report()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Test set performance\n",
+    "\n",
+    "Load the held-out test split and measure accuracy and loss.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dl = learn.dls.test_dl(test_path)\n",
+    "loss, acc, err = learn.validate(dl=test_dl)\n",
+    "print(f'Test loss: {loss:.4f}')\n",
+    "print(f'Test accuracy: {acc:.4f}')\n",
+    "print(f'Test error rate: {err:.4f}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Exporting the learner\n",
+    "\n",
+    "Persist the trained model for later inference.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn.export('plgaultier_fastai_pneumonia.pkl')\n",
+    "print('Model exported to plgaultier_fastai_pneumonia.pkl')\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
