--- a/bhavya1600/Chest_Pneumonia_Classification.ipynb
+++ b/bhavya1600/Chest_Pneumonia_Classification.ipynb
@@ -1,285 +1,360 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Chest Pneumonia Classification in Keras\n",
-        "\n",
-        "This notebook mirrors the TensorFlow/Keras workflow authored by **bhavya1600**. It performs exploratory analysis, builds a convolutional neural network, and evaluates the model on the validation and test splits."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import itertools\n",
-        "from pathlib import Path\n",
-        "\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "import tensorflow as tf\n",
-        "from sklearn.metrics import classification_report, confusion_matrix\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-        "\n",
-        "DATA_ROOT = Path('..') / 'data' / 'chest_xray'\n",
-        "IMG_SIZE = (224, 224)\n",
-        "BATCH_SIZE = 32\n",
-        "SEED = 42"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Data generators\n",
-        "\n",
-        "We rely on `ImageDataGenerator` for on-the-fly augmentation and rescaling. The generators are pointed at the `train`, `val`, and `test` directories following the shared repository layout."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "train_datagen = ImageDataGenerator(\n",
-        "    rescale=1.0 / 255,\n",
-        "    rotation_range=15,\n",
-        "    width_shift_range=0.1,\n",
-        "    height_shift_range=0.1,\n",
-        "    shear_range=0.1,\n",
-        "    zoom_range=0.1,\n",
-        "    horizontal_flip=True,\n",
-        "    fill_mode='nearest'\n",
-        ")\n",
-        "\n",
-        "val_test_datagen = ImageDataGenerator(rescale=1.0 / 255)\n",
-        "\n",
-        "train_generator = train_datagen.flow_from_directory(\n",
-        "    DATA_ROOT / 'train',\n",
-        "    target_size=IMG_SIZE,\n",
-        "    batch_size=BATCH_SIZE,\n",
-        "    class_mode='binary',\n",
-        "    seed=SEED\n",
-        ")\n",
-        "\n",
-        "val_generator = val_test_datagen.flow_from_directory(\n",
-        "    DATA_ROOT / 'val',\n",
-        "    target_size=IMG_SIZE,\n",
-        "    batch_size=BATCH_SIZE,\n",
-        "    class_mode='binary',\n",
-        "    shuffle=False\n",
-        ")\n",
-        "\n",
-        "test_generator = val_test_datagen.flow_from_directory(\n",
-        "    DATA_ROOT / 'test',\n",
-        "    target_size=IMG_SIZE,\n",
-        "    batch_size=BATCH_SIZE,\n",
-        "    class_mode='binary',\n",
-        "    shuffle=False\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Visualize a batch\n",
-        "\n",
-        "Having a quick look at the augmented images ensures the orientation and class balance look reasonable."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "images, labels = next(train_generator)\n",
-        "plt.figure(figsize=(10, 10))\n",
-        "for i in range(9):\n",
-        "    plt.subplot(3, 3, i + 1)\n",
-        "    plt.imshow(images[i])\n",
-        "    plt.title('PNEUMONIA' if labels[i] else 'NORMAL')\n",
-        "    plt.axis('off')\n",
-        "plt.tight_layout()\n",
-        "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Build the CNN\n",
-        "\n",
-        "The architecture combines convolutional blocks with batch normalization and dropout to reduce overfitting."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "model = tf.keras.Sequential([\n",
-        "    tf.keras.layers.Conv2D(32, (3, 3), activation='relu', input_shape=IMG_SIZE + (3,)),\n",
-        "    tf.keras.layers.BatchNormalization(),\n",
-        "    tf.keras.layers.MaxPooling2D((2, 2)),\n",
-        "\n",
-        "    tf.keras.layers.Conv2D(64, (3, 3), activation='relu'),\n",
-        "    tf.keras.layers.BatchNormalization(),\n",
-        "    tf.keras.layers.MaxPooling2D((2, 2)),\n",
-        "\n",
-        "    tf.keras.layers.Conv2D(128, (3, 3), activation='relu'),\n",
-        "    tf.keras.layers.BatchNormalization(),\n",
-        "    tf.keras.layers.MaxPooling2D((2, 2)),\n",
-        "\n",
-        "    tf.keras.layers.Conv2D(256, (3, 3), activation='relu'),\n",
-        "    tf.keras.layers.BatchNormalization(),\n",
-        "    tf.keras.layers.MaxPooling2D((2, 2)),\n",
-        "\n",
-        "    tf.keras.layers.Flatten(),\n",
-        "    tf.keras.layers.Dropout(0.5),\n",
-        "    tf.keras.layers.Dense(256, activation='relu'),\n",
-        "    tf.keras.layers.BatchNormalization(),\n",
-        "    tf.keras.layers.Dropout(0.5),\n",
-        "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
-        "])\n",
-        "\n",
-        "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=1e-4),\n",
-        "              loss='binary_crossentropy',\n",
-        "              metrics=['accuracy'])\n",
-        "model.summary()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Train the network\n",
-        "\n",
-        "The callbacks monitor validation performance and reduce the learning rate on plateau."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "callbacks = [\n",
-        "    tf.keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=3, min_lr=1e-6),\n",
-        "    tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=6, restore_best_weights=True)\n",
-        "]\n",
-        "\n",
-        "history = model.fit(\n",
-        "    train_generator,\n",
-        "    epochs=25,\n",
-        "    validation_data=val_generator,\n",
-        "    callbacks=callbacks\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Plot learning curves\n",
-        "\n",
-        "A combined plot of accuracy and loss helps benchmark the run against previous experiments."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "fig, axes = plt.subplots(1, 2, figsize=(12, 4))\n",
-        "axes[0].plot(history.history['accuracy'], label='train')\n",
-        "axes[0].plot(history.history['val_accuracy'], label='val')\n",
-        "axes[0].set_title('Accuracy')\n",
-        "axes[0].legend()\n",
-        "\n",
-        "axes[1].plot(history.history['loss'], label='train')\n",
-        "axes[1].plot(history.history['val_loss'], label='val')\n",
-        "axes[1].set_title('Loss')\n",
-        "axes[1].legend()\n",
-        "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Evaluate on the test split\n",
-        "\n",
-        "We gather predictions, compute classification metrics, and visualize the confusion matrix."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "preds = model.predict(test_generator)\n",
-        "pred_labels = (preds.ravel() > 0.5).astype(int)\n",
-        "true_labels = test_generator.classes\n",
-        "\n",
-        "print(classification_report(true_labels, pred_labels, target_names=test_generator.class_indices.keys()))\n",
-        "\n",
-        "cm = confusion_matrix(true_labels, pred_labels)\n",
-        "plt.figure(figsize=(5, 5))\n",
-        "plt.imshow(cm, cmap=plt.cm.Blues)\n",
-        "plt.title('Confusion Matrix')\n",
-        "plt.colorbar()\n",
-        "tick_marks = np.arange(len(test_generator.class_indices))\n",
-        "plt.xticks(tick_marks, test_generator.class_indices.keys(), rotation=45)\n",
-        "plt.yticks(tick_marks, test_generator.class_indices.keys())\n",
-        "\n",
-        "for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
-        "    plt.text(j, i, cm[i, j], horizontalalignment='center', color='white' if cm[i, j] > cm.max() / 2 else 'black')\n",
-        "\n",
-        "plt.ylabel('True label')\n",
-        "plt.xlabel('Predicted label')\n",
-        "plt.tight_layout()\n",
-        "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Save the model\n",
-        "\n",
-        "Persisting the weights allows the trained network to be re-used or shared without rerunning the entire training process."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "model.save('bhavya1600_pneumonia_classifier.h5')"
-      ]
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.10"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chest Pneumonia Classification with TensorFlow/Keras\n",
+    "\n",
+    "This notebook reproduces the work from **bhavya1600**. It builds a convolutional neural network with TensorFlow, applies extensive image augmentation, and evaluates the trained model on validation and test splits.\n"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 5
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Imports and environment checks\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras import layers\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "print(f\"TensorFlow version: {tf.__version__}\")\n",
+    "print(f\"Using GPU: {tf.config.list_physical_devices('GPU')}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Dataset paths\n",
+    "\n",
+    "Confirm that the dataset follows the expected directory layout.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_root = Path('..') / 'data' / 'chest_xray'\n",
+    "train_dir = data_root / 'train'\n",
+    "val_dir = data_root / 'val'\n",
+    "test_dir = data_root / 'test'\n",
+    "\n",
+    "for split in (train_dir, val_dir, test_dir):\n",
+    "    for label in ('NORMAL', 'PNEUMONIA'):\n",
+    "        path = split / label\n",
+    "        if not path.exists():\n",
+    "            raise FileNotFoundError(f'Missing expected folder: {path}')\n",
+    "\n",
+    "print('All dataset folders are present.')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Data generators\n",
+    "\n",
+    "Set up training and validation image data generators with augmentations matching the original project.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_size = (224, 224)\n",
+    "batch_size = 32\n",
+    "\n",
+    "train_datagen = keras.preprocessing.image.ImageDataGenerator(\n",
+    "    rescale=1./255,\n",
+    "    rotation_range=15,\n",
+    "    width_shift_range=0.1,\n",
+    "    height_shift_range=0.1,\n",
+    "    shear_range=0.1,\n",
+    "    zoom_range=0.1,\n",
+    "    horizontal_flip=True,\n",
+    "    fill_mode='nearest'\n",
+    ")\n",
+    "\n",
+    "val_datagen = keras.preprocessing.image.ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "test_datagen = keras.preprocessing.image.ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "    train_dir,\n",
+    "    target_size=image_size,\n",
+    "    batch_size=batch_size,\n",
+    "    class_mode='binary'\n",
+    ")\n",
+    "\n",
+    "val_generator = val_datagen.flow_from_directory(\n",
+    "    val_dir,\n",
+    "    target_size=image_size,\n",
+    "    batch_size=batch_size,\n",
+    "    class_mode='binary'\n",
+    ")\n",
+    "\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    test_dir,\n",
+    "    target_size=image_size,\n",
+    "    batch_size=batch_size,\n",
+    "    class_mode='binary',\n",
+    "    shuffle=False\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Visualise augmented samples\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images, labels = next(train_generator)\n",
+    "plt.figure(figsize=(8, 8))\n",
+    "for i in range(9):\n",
+    "    plt.subplot(3, 3, i + 1)\n",
+    "    plt.imshow(images[i])\n",
+    "    plt.title('PNEUMONIA' if labels[i] else 'NORMAL')\n",
+    "    plt.axis('off')\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Model architecture\n",
+    "\n",
+    "Define the CNN that bhavya1600 used, with batch normalisation and dropout for regularisation.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_model(input_shape):\n",
+    "    inputs = keras.Input(shape=input_shape)\n",
+    "    x = layers.Conv2D(32, 3, activation='relu', padding='same')(inputs)\n",
+    "    x = layers.BatchNormalization()(x)\n",
+    "    x = layers.MaxPooling2D()(x)\n",
+    "\n",
+    "    x = layers.Conv2D(64, 3, activation='relu', padding='same')(x)\n",
+    "    x = layers.BatchNormalization()(x)\n",
+    "    x = layers.MaxPooling2D()(x)\n",
+    "\n",
+    "    x = layers.Conv2D(128, 3, activation='relu', padding='same')(x)\n",
+    "    x = layers.BatchNormalization()(x)\n",
+    "    x = layers.MaxPooling2D()(x)\n",
+    "\n",
+    "    x = layers.Conv2D(256, 3, activation='relu', padding='same')(x)\n",
+    "    x = layers.BatchNormalization()(x)\n",
+    "    x = layers.MaxPooling2D()(x)\n",
+    "\n",
+    "    x = layers.Flatten()(x)\n",
+    "    x = layers.Dropout(0.5)(x)\n",
+    "    x = layers.Dense(256, activation='relu')(x)\n",
+    "    x = layers.BatchNormalization()(x)\n",
+    "    x = layers.Dropout(0.5)(x)\n",
+    "\n",
+    "    outputs = layers.Dense(1, activation='sigmoid')(x)\n",
+    "    return keras.Model(inputs, outputs, name='bhavya1600_cnn')\n",
+    "\n",
+    "model = build_model(input_shape=image_size + (3,))\n",
+    "model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Compile the model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\n",
+    "    optimizer=keras.optimizers.Adam(learning_rate=1e-4),\n",
+    "    loss='binary_crossentropy',\n",
+    "    metrics=['accuracy']\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Callbacks\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkpoint_path = 'bhavya1600_cnn.h5'\n",
+    "callbacks = [\n",
+    "    keras.callbacks.ModelCheckpoint(checkpoint_path, monitor='val_accuracy', save_best_only=True),\n",
+    "    keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=3, verbose=1)\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Training\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 25\n",
+    "history = model.fit(\n",
+    "    train_generator,\n",
+    "    validation_data=val_generator,\n",
+    "    epochs=epochs,\n",
+    "    callbacks=callbacks\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Plot training curves\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 5))\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(history.history['accuracy'], label='Train Acc')\n",
+    "plt.plot(history.history['val_accuracy'], label='Val Acc')\n",
+    "plt.legend()\n",
+    "plt.title('Accuracy over epochs')\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(history.history['loss'], label='Train Loss')\n",
+    "plt.plot(history.history['val_loss'], label='Val Loss')\n",
+    "plt.legend()\n",
+    "plt.title('Loss over epochs')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. Evaluation on validation and test sets\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_loss, val_acc = model.evaluate(val_generator)\n",
+    "print(f'Validation accuracy: {val_acc:.4f}')\n",
+    "\n",
+    "test_loss, test_acc = model.evaluate(test_generator)\n",
+    "print(f'Test accuracy: {test_acc:.4f}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11. Classification metrics\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "pred_probs = model.predict(test_generator)\n",
+    "preds = (pred_probs > 0.5).astype(int)\n",
+    "report = classification_report(test_generator.classes, preds, target_names=['NORMAL', 'PNEUMONIA'])\n",
+    "print(report)\n",
+    "\n",
+    "cm = confusion_matrix(test_generator.classes, preds)\n",
+    "print('Confusion matrix:\n",
+    "', cm)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12. Load best weights and save\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_weights(checkpoint_path)\n",
+    "model.save('bhavya1600_cnn_saved_model')\n",
+    "model.save('bhavya1600_cnn.h5')\n",
+    "print('Saved trained model and weights.')\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
